Fix word wrapping on long log entries

--- a/js/Components/LogTable.less
+++ b/js/Components/LogTable.less
@@ -11,6 +11,7 @@
     text-align: left;
     font-weight: normal;
     position: relative;
+    word-wrap: break-word;
   }
 
   .time {
